# le_archive

./: .env.example  .gitignore  CLAUDE.md  README.md
.github/workflows/: deploy.yml
scraper/: README.md  pyproject.toml
scraper/src/le_archive/: __init__.py  _io.py  algolia_client.py  archive_client.py  disambiguation.py  enrich_artists.py  enrich_audio.py  enrich_mixcloud.py  enrich_mood.py  enrich_tracks.py  fingerprint_image.py  index.py  scrape.py  setup_index.py
scraper/src/le_archive/tools/: apply_audit.py  apply_disambig.py  audit.py  audit_artists.py  audit_audio.py  backfill_flags.py  compute_similarity.py  eval_multimodal_mood.py  mint_search_key.py  sync_from_algolia.py  validate_disambig.py
scraper/tests/: test_disambiguation.py  test_enrichment.py
site/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
site/e2e/: smoke.spec.ts
site/src/: App.css  App.tsx  index.css  main.tsx  types.ts
site/src/components/: ArtistModal.tsx  Colophon.tsx  CountedRefinementList.tsx  DebugStrip.tsx  FavoritesToggle.tsx  FocusStrip.tsx  Hit.tsx  MobileFilters.tsx  Player.tsx  QueueBridge.tsx  QueueToggle.tsx  SchoolMap.tsx  ScrollProgress.tsx  SimilarStrip.tsx  ThemeToggle.tsx  Visualizer.tsx  YearTimeline.tsx
site/src/hooks/: useArtistDossier.ts  useArtistModal.ts  useArtistSets.ts  useArtistSummary.ts  useAudioAnalyser.ts  useAudioCoverage.ts  useDebugStore.ts  useEnrichmentCoverage.ts  useFavoritesStore.ts  useFingerprint.ts  useFocusStore.ts  useKeyboardShortcuts.ts  usePlayerStore.ts  useQueueStore.ts  useSimilarSets.ts  (+1 more)
(+2 files in other folders)
